force-app/main/default/objects/MNB_Currency_Rate__c/MNB_Currency_Rate__c.object-meta.xml
<CustomObject>
    <label>MNB Currency Rate</label>
    <nameField>
        <displayFormat>MNB-{0000}</displayFormat>
        <label>MNB Currency Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MNB Currency Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>