force-app/main/default/objects/MNB_Currency_Rate__c/fields/Base_Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency_Name__c</fullName>
    <label>Base Currency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>