force-app/main/default/objects/MNB_Currency_Rate__c/fields/Counter_Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Counter_Currency_Name__c</fullName>
    <label>Counter Currency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>