force-app/main/default/objects/MNB_Currency_Rate__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>