force-app/main/default/objects/MNB_Currency_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Currency_Name__c</columns>
    <columns>Counter_Currency_Name__c</columns>
    <columns>Rate__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>